--- a/.env
+++ b/.env
@@ -11,3 +11,6 @@ DB_PORT=5432
 DB_USERNAME=postgres
 DB_PASSWORD=jaloliddin_0205
 DB_NAME=flowers
+ELEPHANT_SQL_URL=postgres://yswzkivb:sHlrNe-dX0fO_IuwB_AaYmMqcB9BUy2d@chunee.db.elephantsql.com/yswzkivb
+
+TELEGRAM_BOT_TOKEN=5982591757:AAFVI1zvYSxVrvpq6rPDJ7Glfmp_lY9Ccz4
